--- a/my-website/docs/Linux/Диагностика сети.md
+++ b/my-website/docs/Linux/Диагностика сети.md
@@ -4,7 +4,9 @@ sidebar_position: 8
 
 # Диагностика сети.
 
-# Диагностика сети и доступности
+:::tip
+Все утилиты используются в реальной работе и траблшутинг является неотъемлемым навыком любого администратора, будто Linux или Windows.
+:::
 
 ## Просмотр информации о сетевых интерфейсах
 
