--- a/my-website/docs/Linux/Устранение проблем сети.md
+++ b/my-website/docs/Linux/Устранение проблем сети.md
@@ -2,7 +2,6 @@
 sidebar_position: 9
 ---
 
-# Устранение проблем сети.
 
 # Устранение проблем сети Linux
 
@@ -10,11 +9,11 @@ sidebar_position: 9
 
 Пользователь делает запрос на сервер репозитория по [http://rep.soft](http://rep.soft/), но получает ошибку, что сервер недоступен. Здесь может быть несколько проблем:
 
-1. Не подключен к сети.
-2. DNS не настроен на хосте.
-3. Нет маршрута к серверу.
-4. Сервер репозитория неисправен.
-5. Неверно настроен доступ.
+1. **Не подключен к сети.**
+2. **DNS не настроен на хосте.**
+3. **Нет маршрута к серверу.**
+4. **Сервер репозитория неисправен.**
+5. **Неверно настроен доступ.**
 
 ### Решение: Проверка подключения к сети
 
@@ -80,3 +79,7 @@ ip link set dev ens33 up
 ```
 
 Здесь `ens33` — это имя сетевого интерфейса, который вы хотите поднять.
+
+:::tip
+**Очень часто проблема таиться в /etc/hosts т.к неправильно указан сервер. Проверьте этот файл.**
+:::
