fixed some issues

--- a/my-website/docs/Linux/Процессы и демоны.md
+++ b/my-website/docs/Linux/Процессы и демоны.md
@@ -6,9 +6,9 @@ sidebar_position: 12
 # Процессы и демоны.
 
 [kliganN - Overview](https://github.com/kligann)
-
+:::info
 Процессы в Linux - это работающие программы, которые выполняются в операционной системе. Каждый процесс имеет свой уникальный идентификатор (PID), который позволяет операционной системе отслеживать и управлять процессами.
-
+:::
 ## Основные системные вызовы для работы с процессами
 
 - `fork()` - создает дочерний процесс, который является копией родительского процесса.
