--- a/my-website/docs/Linux/Процессы и демоны.md
+++ b/my-website/docs/Linux/Процессы и демоны.md
@@ -3,7 +3,7 @@ sidebar_position: 12
 ---
 
 
-# Процессы и демоны.
+# Процессы и демоны
 
 [kliganN - Overview](https://github.com/kligann)
 :::info
