--- a/my-website/docs/Linux/Разрешения файлов.md
+++ b/my-website/docs/Linux/Разрешения файлов.md
@@ -2,7 +2,7 @@
 sidebar_position: 4
 ---
 
-# Разрешения файлов.
+# Разрешения файлов
 
 
 Чтобы просмотреть права доступа к файлу, используйте команду `ls -l` с указанием пути к файлу:
