--- a/my-website/docs/Linux/Диагностика сети.md
+++ b/my-website/docs/Linux/Диагностика сети.md
@@ -2,7 +2,7 @@
 sidebar_position: 8
 ---
 
-# Диагностика сети.
+# Диагностика сети
 
 :::tip
 Все утилиты используются в реальной работе и траблшутинг является неотъемлемым навыком любого администратора, будто Linux или Windows.
