--- a/my-website/docs/Linux/Информация о пользователях.md
+++ b/my-website/docs/Linux/Информация о пользователях.md
@@ -2,7 +2,7 @@
 sidebar_position: 2
 ---
 
-# Информация о пользователях.
+# Информация о пользователях
 
 # Информация о пользователях в системе Linux
 
