--- a/my-website/docs/Linux/Управление пользователями.md
+++ b/my-website/docs/Linux/Управление пользователями.md
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-# Управление пользователями.
+# Управление пользователями
 
 # Добавление пользователя в систему Linux
 
