--- a/my-website/blog/2023-11-02-blog-aws.md
+++ b/my-website/blog/2023-11-02-blog-aws.md
@@ -7,7 +7,7 @@ authors:
     url: https://github.com/kliganN
     email: kligann@subnetwork.ru
     image_url: https://avatars.githubusercontent.com/u/84453321?v=4
-tags: [proxmox, linux]
+tags: [aws, nginx]
 image: https://i.imgur.com/mErPwqL.png
 hide_table_of_contents: false
 ---
